gke-cicd/tls-ingress/ingress.yml
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: nginx
#   annotations:
#     kubernetes.io/ingress.global-static-ip-name: "kubernetes-ingress"
# spec:
#   backend:
#     serviceName: nginx
#     servicePort: 80

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
 name: ingress-service
 annotations:
  #  kubernetes.io/ingress.class: 'nginx'
  #  nginx.ingress.kubernetes.io/use-regex: 'true'
  #  nginx.ingress.kubernetes.io/rewrite-target: /$1
   kubernetes.io/ingress.global-static-ip-name: "kubernetes-ingress"
   # UPDATE THIS LINE ABOVE
spec:
 rules:
   - host: ayoub.34.117.11.11.xip.io
     http:
       paths:
         - path: /
           # UPDATE THIS LINE ABOVE
           backend:
             serviceName: nginx
             servicePort: 80
        #  - path: /api
        #    # UPDATE THIS LINE ABOVE
        #    backend:
        #      serviceName: springboot-k8s-mysql
        #      servicePort: 8080
